# EasyCPPSockets

./: .gitignore  CMakeLists.txt  CMakePresets.json  build  configure  configure-release  install  readme.md  run  test
.github/workflows/: build.yml  pingpong-example.yml  test.yml
cmake/: EasyCPPSocketsConfig.cmake.in
examples/pingpong/: CMakeLists.txt
examples/pingpong/client/: CMakeLists.txt  client.cpp
examples/pingpong/server/: CMakeLists.txt  server.cpp
include/EasyCPPSockets/: ServerSocket.h  Socket.h  SocketAddress.h  SocketBuffer.h
src/: ServerSocket.cpp  Socket.cpp  SocketBuffer.cpp  client.cpp  main.cpp  server.cpp
src/include/: ServerSocket.h  Socket.h  SocketBuffer.h  SocketDescriptor.h
tests/: BasicSendAndReceiveTest.cpp  ConnectionTest.cpp  SendAllAndRecvAllTest.cpp  SockStreamTest.cpp  people.csv
tests/pingpong/: CMakeLists.txt  client.cpp  server.cpp
tests/pingpong-no-sockstream/: CMakeLists.txt  client.cpp  server.cpp
